# GooseMaterial

./: .gitignore  GooseSolid.pc  GooseSolid.pc.in  GooseSolidConfig.cmake  README.md  python_interface.cpp  setup.py
develop/: PlasticLinearElastic.cpp  ViscoPlasticLinearElastic.cpp  ViscoPlasticLinearHardeningElastic.cpp
develop/LinearElastic/: known_numerical_solutions.cpp
develop/NonLinearElastic/: consistency_check.py  known_numerical_solutions.cpp
develop/PlasticLinearElastic/: consistency_check.py  known_numerical_solutions.cpp
develop/ViscoPlasticHardeningLinearElastic/: known_numerical_solutions.cpp
develop/ViscoPlasticLinearElastic/: known_numerical_solutions.cpp
docs/AmorphousSolid/LinearStrain/ElasticLiquid/: readme.tex
docs/AmorphousSolid/LinearStrain/ElasticLiquid/example/: homogeneous.py
docs/AmorphousSolid/LinearStrain/ElastoPlastic/: library.bib  readme.tex
docs/AmorphousSolid/LinearStrain/ElastoPlastic/figures/: epseq_2d.py  planar-strain_2d.py  potential.py  strain-modes_2d_epseq.py  stress-strain.py
docs/ElasticPlasticPotential/: ElasticPlasticPotential.tex  goose-article.cls  potential.py  stress-strain.py
docs/LinearElastic/: LinearElastic.tex
docs/LinearElastic_ViscousFluid/: LinearElastic_ViscousFluid.tex  example.py  example_random.py
docs/Metal/LinearStrain/Elastic/: library.bib  readme.tex
docs/Metal/LinearStrain/ElastoPlastic/: readme.tex
docs/Metal/LinearStrain/ElastoViscoPlastic/: readme.tex
docs/Metal/LinearStrain/ElastoViscoPlastic/figures/: parameters.py
docs/Metal/LinearStrain/ElastoViscoPlasticHardening/: readme.tex
docs/Metal/LinearStrain/NonLinearElastic/: readme.tex
docs/NonLinearElastic/: NonLinearElastic.tex
docs/PlasticLinearElastic/: PlasticLinearElastic.tex  example.py
docs/ViscoPlasticHardeningLinearElastic/: ViscoPlasticHardeningLinearElastic.tex  parameters.py
docs/ViscoPlasticLinearElastic/: ViscoPlasticLinearElastic.tex  main.tex
include/GooseSolid/: ElasticPlasticPotential.h  LinearElastic.h  LinearElastic_ViscousFluid.h  Miscellaneous.h  NonLinearElastic.h  PlasticLinearElastic.h  ViscoPlasticHardeningLinearElastic.h  ViscoPlasticLinearElastic.h
python/: python_interface.cpp  setup.py
src/: CMakeLists.txt  GooseMaterial.pc.in  GooseMaterialConfig.cmake.in  GooseSolid.pc.in  GooseSolidConfig.cmake.in
src/GooseMaterial/: GooseMaterial.h  Macros.h
src/GooseMaterial/AmorphousSolid/LinearStrain/: Elastic.h  ElasticLiquid.h  ElastoPlastic.h
src/GooseMaterial/AmorphousSolid/LinearStrain/Elastic/: Cartesian2d.h  Cartesian3d.h
src/GooseMaterial/AmorphousSolid/LinearStrain/ElasticLiquid/: Cartesian3d.h
src/GooseMaterial/AmorphousSolid/LinearStrain/ElastoPlastic/: Cartesian2d.h  Cartesian2dPlanarShear.h  Cartesian3d.h  Cartesian3dPlanarShear.h  PlanarShear_Cartesian2d.h  PlanarShear_Cartesian3d.h  Smooth_Cartesian2d.h  Smooth_Cartesian3d.h  Smooth_PlanarShear_Cartesian2d.h  Smooth_PlanarShear_Cartesian3d.h
src/GooseMaterial/Metal/LinearStrain/: Elastic.h  ElastoPlastic.h  ElastoViscoPlastic.h  ElastoViscoPlasticHardening.h  NonLinearElastic.h
src/GooseMaterial/Metal/LinearStrain/Elastic/: Cartesian3d.h  miscellaneous.h
src/GooseMaterial/Metal/LinearStrain/ElasticPlastic/: Cartesian3d.h
src/GooseMaterial/Metal/LinearStrain/ElasticViscoPlasiticHardening/: Cartesian3d.h
src/GooseMaterial/Metal/LinearStrain/ElastoPlastic/: Cartesian3d.h
src/GooseMaterial/Metal/LinearStrain/ElastoViscoPlastic/: Cartesian3d.h
src/GooseMaterial/Metal/LinearStrain/ElastoViscoPlasticHardening/: Cartesian3d.h
src/GooseMaterial/Metal/LinearStrain/NonLinearElastic/: Cartesian3d.h
src/GooseSolid/: ElasticPlasticPotential.h  LinearElastic_ViscousFluid.h  NonLinearElastic.h  ViscoPlasticHardeningLinearElastic.h
